# flakor

./: AUTHORS  CMakeLists.txt
doc/: CODING_STYLE.md  doc.txt  代码规范.md
flakor/: Android.mk  makefile
flakor/include/: ByteOrder.h  Config.h  Macros.h  StdC.h
flakor/include/core/: CommandBuffer.h  CommandPool.h  IModule.h
flakor/include/core/graphic/android/: gl.h  gl3stub.h
flakor/include/core/graphic/ios/: gl.h
flakor/include/core/memory/: README.md
flakor/include/lang/: Ref.h
flakor/include/platform/: PlafrormLog.h  Platform.h  PlatformCompilerPreSetup.h  PlatformMacros.h
flakor/include/platform/android/: AndroidCompilerPreSetup.h  AndroidLog.h
flakor/include/platform/ios/: IOSCompilerPreSetup.h  IOSLog.h
flakor/include/runtime/lang/: Ref.h  Ref2.h
flakor/src/core/: CommandExec.h  ICommand.h  ModuleManager.h
flakor/src/core/graphic/: graphic_module.md  window.h
flakor/src/core/graphic/android/: GLView.cpp  GLView.h
flakor/src/core/graphic/ios/: GLContext.mm
flakor/src/core/input/: ICursor.h  InputHandler.h  InputType.h
flakor/src/platform/: PlatformLog.cpp  PlatformMem.h  PlatformSplash.h
flakor/src/runtime/: IPlugin.h
flakor/src/runtime/lang/: Ref.cpp  Thread.h  VariantTypes.h
flakor/src/runtime/math/: ByteSwap.h  Color.h  Compression.h  Edge.h  Matrices.cpp  NumberLimit.h  Plane.h  Point.h  Time.h  VectorsF.h
src/include/: common.cpp  common.h  macros.h
src/include/platform/: PlatformMacros.h  platform.h
src/include/platform/android/: AndroidAssert.h
src/include/platform/ios/: IOSAssert.h
src/runtime/lang/: Ref.cpp
(+2 files in other folders)
